--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -32,11 +33,11 @@
         <h1>My failures of previous year</h1>
         <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
         <div class="failures-pragraph">
-            <p>Contrary to popular belief, is not simply.</p>
-            <p>Contrary to popular belief.</p>
-            <p>Contrary to popular , is not simply.</p>
-            <p>Contrary to popular belief, is not simply.</p>
-            <p>Contrary to popular simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #16D887;"></i> Contrary to popular belief, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #16D887;"></i> Contrary to popular belief.</p>
+            <p><i class="fa-solid fa-check" style="color: #16D887;"></i> Contrary to popular , is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #16D887;"></i> Contrary to popular belief, is not simply.</p>
+            <p><i class="fa-solid fa-check" style="color: #16D887;"></i> Contrary to popular simply.</p>
         </div>
         </div>
 </section>
@@ -84,10 +85,12 @@
         <div class="Future-box">
             <h2>Future</h2>
             <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <span>
+            <p>Email : info@gmail.com</p>
+            <p>Phone : 01500 00 00 00</p>
+            </span>
 
             <div class="icon">
-                <p>Email : info@gmail.com</p>
-            <p>Phone : 01500 00 00 00</p>
                 <img src="images/icons/fb.png" alt="">
                 <img src="images/icons/twitter.png" alt="">
                 <img src="images/icons/youtube.png" alt="">
@@ -102,6 +105,7 @@
             <button class="btn">Subscribe</button>
         </div>
     </section>
+    <p style="color: #FFFF; text-align: center; padding: 20px;">&copy; All Right Reserved Nasrullah</p>
 </footer>
 
 </body>
